--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["vagola <vladislavs.golubs@yandex.ru>"]
 edition = "2018"
 
-[dependencies]
+[dev-dependencies]
+tempfile = "3.1"
