--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["vagola <vladislavs.golubs@yandex.ru>"]
 edition = "2018"
 
+[dependencies]
+byteorder = "1.3"
+
 [dev-dependencies]
 tempfile = "3.1"
