--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 
 [dependencies]
 byteorder = "1.3"
-flate2 = "1.0"
+named-binary-tag = "0.2"
 
 [dev-dependencies]
 tempfile = "3.1"
