--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 byteorder = "1.3"
 named-binary-tag = "0.2"
 bitvec = "0.15"
+zip = { optional = true, version = "0.5.3", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 tempfile = "3.1"
