--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ addons:
       - gcc
       - binutils-dev
       - libiberty-dev
+script:
+  - cargo test --verbose --all-features
 after_success: |
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
   tar xzf master.tar.gz &&
