--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 byteorder = "1.3"
 named-binary-tag = "0.2"
 bitvec = "0.17"
+log = "0.4.11"
 
 [dev-dependencies]
 tempfile = "3.1"
