Reduce crate size by adding 'include' directive. (#10)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/eihwaz/anvil-region"
 repository = "https://github.com/eihwaz/anvil-region"
 keywords = ["minecraft", "region", "anvil", "io"]
 readme = "README.md"
+include = ["src/**/*", "LICENSE", "README.md", "test/*"]
 
 [dependencies]
 byteorder = "1.3"
